// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expenses Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzoLag eydcJC"
  >
    <h1
      class="sc-fzoXzr MtNNd"
    >
      Expenses
    </h1>
    <div
      class="sc-fzpjYC gnMnem"
    >
      <div
        class="sc-fznxsB dsgAhn"
      >
        <div
          class="sc-fznJRM dEkFjf"
        >
          01 Aug
           - 
          31 Aug
          <svg>
            chevron.svg
          </svg>
        </div>
        <h3
          class="sc-fznWqX jXPxyW"
        >
          346.5
          $
        </h3>
      </div>
      <div
        class="sc-fzoiQi dFUsJk"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm khxSQh"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb iGvJwE"
          >
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="currency"
              >
                Currency
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="currency"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="currency"
                    role="button"
                    tabindex="0"
                  >
                    Euro €
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="euro"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
              >
                Categories
              </label>
              <div
                class="sc-AxmLO ceYEas"
              >
                <p
                  class="sc-fzozJi ihgPmv"
                  color="#673AB7"
                >
                  Transportes
                </p>
                <p
                  class="sc-fzozJi gqjDvs"
                  color="#FFC107"
                >
                  Saúde
                </p>
                <p
                  class="sc-fzozJi fKpEFM"
                  color="#FF9800"
                >
                  Casa
                </p>
                <p
                  class="sc-fzozJi dNhvgN"
                  color="#9E9E9E"
                >
                  Vestuário
                </p>
                <p
                  class="sc-fzozJi tItWo"
                  color="#E91E63"
                >
                  Educação
                </p>
                <p
                  class="sc-fzozJi bTUfLY"
                  color="#4CAF50"
                >
                  Lazer
                </p>
                <span
                  class="sc-fzoLsD bpeBKU"
                >
                  <svg>
                    plus.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fzqARJ elDNLU"
    >
      <div
        class="sc-fzqNqU dPyFOh"
      >
        <h4
          class="sc-fzoyTs MYaZa"
        >
          04 Aug
        </h4>
        <h4
          class="sc-fzoNJl gNjhoU"
        >
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Conta Hospital
              </h5>
              <h6
                class="sc-fznZeY ekLkIy"
                color="#FFC107"
              >
                Saúde
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
        </h4>
      </div>
      <div
        class="sc-fzqNqU dPyFOh"
      >
        <h4
          class="sc-fzoyTs MYaZa"
        >
          05 Aug
        </h4>
        <h4
          class="sc-fzoNJl gNjhoU"
        >
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Compras Continente
              </h5>
              <h6
                class="sc-fznZeY gooBaK"
                color="#FF9800"
              >
                Casa
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Gasóleo
              </h5>
              <h6
                class="sc-fznZeY cjOYaZ"
                color="#673AB7"
              >
                Transportes
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
        </h4>
      </div>
      <div
        class="sc-fzqNqU dPyFOh"
      >
        <h4
          class="sc-fzoyTs MYaZa"
        >
          07 Aug
        </h4>
        <h4
          class="sc-fzoNJl gNjhoU"
        >
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Compras Pull&Bear
              </h5>
              <h6
                class="sc-fznZeY kvbuor"
                color="#9E9E9E"
              >
                Vestuário
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
        </h4>
      </div>
      <div
        class="sc-fzqNqU dPyFOh"
      >
        <h4
          class="sc-fzoyTs MYaZa"
        >
          08 Aug
        </h4>
        <h4
          class="sc-fzoNJl gNjhoU"
        >
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Livro Amazon
              </h5>
              <h6
                class="sc-fznZeY kLrACO"
                color="#E91E63"
              >
                Educação
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
        </h4>
      </div>
      <div
        class="sc-fzqNqU dPyFOh"
      >
        <h4
          class="sc-fzoyTs MYaZa"
        >
          10 Aug
        </h4>
        <h4
          class="sc-fzoNJl gNjhoU"
        >
          <article
            class="sc-fzqBZW dBijkG"
          >
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Jogo XBOX
              </h5>
              <h6
                class="sc-fznZeY djbAQy"
                color="#4CAF50"
              >
                Lazer
              </h6>
              <p
                class="sc-fzqNJr hKWXie"
              >
                57.75
                $
              </p>
            </div>
          </article>
        </h4>
      </div>
    </section>
  </div>
</div>
`;

exports[`ExpensesSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb iGvJwE"
    >
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="currency"
        >
          Currency
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="currency"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="currency"
              role="button"
              tabindex="0"
            >
              Euro €
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="euro"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
        >
          Categories
        </label>
        <div
          class="sc-AxmLO ceYEas"
        >
          <p
            class="sc-fzozJi ihgPmv"
            color="#673AB7"
          >
            Transportes
          </p>
          <p
            class="sc-fzozJi gqjDvs"
            color="#FFC107"
          >
            Saúde
          </p>
          <p
            class="sc-fzozJi fKpEFM"
            color="#FF9800"
          >
            Casa
          </p>
          <p
            class="sc-fzozJi dNhvgN"
            color="#9E9E9E"
          >
            Vestuário
          </p>
          <p
            class="sc-fzozJi tItWo"
            color="#E91E63"
          >
            Educação
          </p>
          <p
            class="sc-fzozJi bTUfLY"
            color="#4CAF50"
          >
            Lazer
          </p>
          <span
            class="sc-fzoLsD bpeBKU"
          >
            <svg>
              plus.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;

exports[`SingleExpense matches snapshot 1`] = `
<div>
  <article
    class="sc-fzqBZW dBijkG"
  >
    <div
      class="sc-fzplWN gwxuzL"
    >
      <h5
        class="sc-fznyAO drGMcz"
      >
        Conta Hospital
      </h5>
      <h6
        class="sc-fznZeY ekLkIy"
        color="#FFC107"
      >
        Saúde
      </h6>
      <p
        class="sc-fzqNJr hKWXie"
      >
        57.75
        $
      </p>
    </div>
  </article>
</div>
`;
